; ModuleID = '/home/carl/AnghaBench/git/extr_submodule.c_open_submodule.c'
source_filename = "/home/carl/AnghaBench/git/extr_submodule.c_open_submodule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.repository = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.repository* (i8*)* @open_submodule to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.repository* @open_submodule(i8* %0) #0 {
  %2 = alloca %struct.repository*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.strbuf, align 4
  %5 = alloca %struct.repository*, align 8
  store i8* %0, i8** %3, align 8
  %6 = bitcast %struct.strbuf* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %7 = call %struct.repository* @xmalloc(i32 4)
  store %struct.repository* %7, %struct.repository** %5, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @submodule_to_gitdir(%struct.strbuf* %4, i8* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %17, label %11

11:                                               ; preds = %1
  %12 = load %struct.repository*, %struct.repository** %5, align 8
  %13 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @repo_init(%struct.repository* %12, i32 %14, i32* null)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %11, %1
  %18 = call i32 @strbuf_release(%struct.strbuf* %4)
  %19 = load %struct.repository*, %struct.repository** %5, align 8
  %20 = call i32 @free(%struct.repository* %19)
  store %struct.repository* null, %struct.repository** %2, align 8
  br label %28

21:                                               ; preds = %11
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @xstrdup(i8* %22)
  %24 = load %struct.repository*, %struct.repository** %5, align 8
  %25 = getelementptr inbounds %struct.repository, %struct.repository* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  %26 = call i32 @strbuf_release(%struct.strbuf* %4)
  %27 = load %struct.repository*, %struct.repository** %5, align 8
  store %struct.repository* %27, %struct.repository** %2, align 8
  br label %28

28:                                               ; preds = %21, %17
  %29 = load %struct.repository*, %struct.repository** %2, align 8
  ret %struct.repository* %29
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local %struct.repository* @xmalloc(i32) #2

declare dso_local i64 @submodule_to_gitdir(%struct.strbuf*, i8*) #2

declare dso_local i64 @repo_init(%struct.repository*, i32, i32*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2

declare dso_local i32 @free(%struct.repository*) #2

declare dso_local i32 @xstrdup(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
